# cpisync

./: .cproject  .gdb_history  .gitignore  .project  BUGS.txt  CMakeLists.txt  CPISync-1.0.0-.x86_64.deb  CPISync-1.0.0-.x86_64.rpm  CPISync-2.0.3-.x86_64.deb  CPISync-2.0.3-.x86_64.rpm  INSTRUCTIONS.txt  Makefile  Performance  README  README.md  Resource Monitor.0001.heap  Resource Monitor.0002.heap  Resource Monitor.0003.heap  Resource Monitor.0004.heap  Resource Monitor.0005.heap  Resource Monitor.0006.heap  Resource Monitor.0007.heap  Resource Monitor.0008.heap  Resource Monitor.0009.heap  Resource Monitor.0010.heap  Resource Monitor.0011.heap  Resource Monitor.0012.heap  Resource Monitor.0013.heap  Resource Monitor.0014.heap  Resource Monitor.0015.heap  Resource Monitor.0016.heap  Resource Monitor.0017.heap  Resource Monitor.0018.heap  Resource Monitor.0019.heap  Resource Monitor.0020.heap  Resource Monitor.0021.heap  Resource Monitor.0022.heap  Resource Monitor.0023.heap  Resource Monitor.0024.heap  Resource Monitor.0025.heap  (+273 more)
.github/workflows/: ccpp.yml
Performance.dSYM/Contents/: Info.plist
UnitTest.dSYM/Contents/: Info.plist
doc/: BUGS.md  README.md
doc/FAQ/: wchar.md
doc/code/: Communicants.md  Data.md  Syncs.md
doc/dataStructures/: CuckooFilters.md
include/: AdjMtx.h  Auxiliary.h  AuxiliaryDependent.h  CPI.h  CPISync.h  CPISync_ExistingConnection.h  CPISync_HalfRound.h  CPISync_HalfRound_Hashed.h  CPISync_OneLessRound.h  CommDummy.h  CommSocket.h  CommString.h  Communicant.h  ConstantsAndTypes.h  DataFileC.h  DataMemC.h  DataObjC.h  DataObject.h  DataPriorityObject.h  Exceptions.h  ForkHandle.h  FullSync.h  GenLog.h  GenSync.h  HashSync.h  IBLT.h  IBLTSync.h  IBLTSync_HalfRound.h  IBLTSync_SetDiff.h  InterCPISync.h  Logger.h  PerformanceData.h  PrioCPISync.h  ProbCPISync.h  ProcessData.h  SetsOfContent.h  SetsOfStrings.h  StrataEst.h  StrataEst_CPI.h  SyncMethod.h  (+5 more)
include/Aux/: Auxiliary.h  ForkHandle.h  Logger.h  SyncMethod.h
include/CPISync/Aux/: Auxiliary.h  ConstantsAndTypes.h  Exceptions.h  ForkHandle.h  Logger.h  Serializable.h  SyncMethod.h
include/CPISync/Communicants/: CommDummy.h  CommSocket.h  CommString.h  Communicant.h
include/CPISync/Data/: DataFileC.h  DataMemC.h  DataObjC.h  DataObject.h  DataPriorityObject.h
include/CPISync/Syncs/: CPISync.h  CPISync_HalfRound.h  CPISync_HalfRound_Hashed.h  Compact2DBitArray.h  Cuckoo.h  CuckooSync.h  FullSync.h  GenSync.h  HashSync.h  IBLT.h  IBLT4IBLTs.h  IBLT4IBLTsSync.h  IBLTMultiset.h  IBLTSetOfSets.h  IBLTSync.h  IBLTSync_HalfRound.h  IBLTSync_Multiset.h  InterCPISync.h  PrioCPISync.h  ProbCPISync.h
include/Communicants/: CommDummy.h  CommString.h  Communicant.h
include/Data/: DataFileC.h  DataMemC.h  DataObjC.h  DataObject.h
include/Syncs/: CPISync.h  CPISync_ExistingConnection.h  CPISync_HalfRound.h  CPISync_HalfRound_Hashed.h  CPISync_OneLessRound.h  FullSync.h  GenSync.h  HashSync.h  IBLT.h  IBLTSync.h  IBLTSync_HalfRound.h  InterCPISync.h  PrioCPISync.h  ProbCPISync.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  licenseheader.txt  project.properties  project.xml
nbproject/private/: configurations.xml  private.xml
src/: AdjMtx.cpp  CPI.cpp  CPISync.cpp  CommDummy.cpp  CommSocket.cpp  CommString.cpp  Communicant.cpp  DataObject.cpp  FullSync.cpp  GenPlot.cpp  GenSync.cpp  HashSync.cpp  IBLT.cpp  IBLTSync.cpp  IBLTSync.h  IBLTSync_SetDiff.cpp  InterCPISync.cpp  Logger.cpp  PerformanceData.cpp  Playground.cpp  SetsOfContent.cpp  SetsOfStrings.cpp  StrataEst.cpp  StrataEst_CPI.cpp  SyncMethod.cpp  TestIBLT.cpp  TryCuckooSync.cpp  TryMe  TryMe.cpp  TryMultisetIBLTSync.cpp  UID.cpp  UniqueDecode.cpp  kshingling.cpp  kshinglingSync.cpp  main.cpp  probCPISync.cpp
src/Aux/: Logger.cpp  SyncMethod.cpp  UID.cpp
src/Communicants/: CommDummy.cpp  CommSocket.cpp  CommString.cpp  Communicant.cpp
src/Data/: DataObject.cpp
src/Syncs/: CPISync.cpp  Compact2DBitArray.cpp  Cuckoo.cpp  CuckooSync.cpp  FullSync.cpp  GenSync.cpp  HashSync.cpp  IBLT.cpp  IBLT4IBLTs.cpp  IBLT4IBLTsSync.cpp  IBLTMultiset.cpp  IBLTSetOfSets.cpp  IBLTSync.cpp  IBLTSync_Multiset.cpp  InterCPISync.cpp  README.md  probCPISync.cpp
tests/: AuxiliaryTest.cpp  AuxiliaryTest.h  AuxiliaryTestRunner.cpp  CommDummy.cpp  CommDummy.h  CommStringTest.cpp  CommStringTest.h  CommStringTestRunner.cpp  CommunicantTest.cpp  CommunicantTest.h  CommunicantTestRunner.cpp  DataObjectTest.cpp  DataObjectTestRunner.cpp  DatasetGenerator.h  FullSyncTest.cpp  FullSyncTest.h  FullSyncTestRunner.cpp  GenSyncTest.cpp  GenSyncTest.h  GenSyncTestRunner.cpp  IBLTTest.cpp  IBLTTest.h  IBLTTestRunner.cpp  SampleCode.txt  SampleTxt.txt  TestAuxiliary.h  cpi_system_test.cpp  testRunner.cpp
tests/StringRecon/: KshingleTest.h
tests/perf/: Comm_vs_Edit_Dist_Str_Len=1000_&_K=10.txt  Comm_vs_Edit_Dist_Str_Len=1000_&_K=5.txt  Comm_vs_Edit_Dist_Str_Len=100_&_K=10.txt  Comm_vs_Edit_Dist_Str_Len=100_&_K=7.txt  Comm_vs_Edit_Dist_Str_Len=200_&_K=3.txt  FirstTest.txt  GenPlot.cpp  GenPlot.h  PerformanceData.cpp  PerformanceData.h  graphGen.py  kshinglingSyncPerfTest.cpp  kshinglingSyncPerfTest.h  testklgperf.txt  testklgperf2D.txt  testklgperf3D.txt
tests/sys/long/: GenSyncTest.cpp  (+3 more)
tests/unit/: AdjMtxTest.cpp  AdjMtxTest.h  AuxiliaryTest.cpp  AuxiliaryTest.h  CPISyncTest.cpp  CPISyncTest.h  CPITest.cpp  CPITest.h  CommSocketTest.cpp  CommSocketTest.h  CommStringTest.cpp  CommStringTest.h  CommunicantTest.cpp  CommunicantTest.h  Compact2DBitArrayTest.cpp  Compact2DBitArrayTest.h  CuckooSyncTest.cpp  CuckooSyncTest.h  CuckooTest.cpp  CuckooTest.h  DataObjectTest.cpp  DataObjectTest.h  DataPriorityObjectTest.cpp  DataPriorityObjectTest.h  DiffEstimatorTest.cpp  DiffEstimatorTest.h  FullSyncTest.cpp  FullSyncTest.h  IBLT4IBLTsSyncTest.cpp  IBLT4IBLTsSyncTest.h  IBLTSetOfSetsTest.cpp  IBLTSetOfSetsTest.h  IBLTSyncDiffTest.cpp  IBLTSyncDiffTest.h  IBLTSyncTest.cpp  IBLTSyncTest.h  IBLTTest.cpp  IBLTTest.h  SetsOfContentTest.cpp  SetsOfContentTest.h  (+10 more)
(+15 files in other folders)
